--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME="Log My Games!"
+APP_NAME="Log My Games! (Development)"
 APP_ENV=local
 APP_KEY=base64:26359oZf+CuJn0SRzLVkUgSIVRdO/mteL8K7nTzEe7U=
 APP_DEBUG=true
-APP_URL=https://www.logmygames.me
+APP_URL=https://dev.logmygames.me
 
 LOG_CHANNEL=stack
 
@@ -15,8 +15,9 @@ DB_PASSWORD=Bu57YaHokaFa36PiX55oP5nAtijIQ7
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=true
 QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
