--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
+        "hisorange/browser-detect": "^3.1",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "spatie/laravel-activitylog": "^2.5"
