Added import/export functionality Import -> Game Officials and Arbiter Added exceptions for imports Added support for user profile picture/avatar New database migrations

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "hisorange/browser-detect": "^3.1",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^2.1",
         "spatie/laravel-activitylog": "^2.5"
     },
     "require-dev": {
