--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /public/hot
 /public/storage
 /storage/*.key
+/vendor
 /.idea
 /.vscode
 /.vagrant
@@ -9,6 +10,7 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+.env
 error.log
 policy
 public/css/app.css
