--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,19 @@
 {
     "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "description": "Log My Games!",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~4.0",
         "hisorange/browser-detect": "^3.1",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^2.1",
+        "nickurt/laravel-abuseipdb": "1.*",
+        "pedrofornaza/monolog-mysql": "^0.1.0",
         "spatie/laravel-activitylog": "^2.5"
     },
     "require-dev": {
